Changelog for Yancy

{{ $NEXT }}

1.061     2020-06-10 10:49:12-05:00 America/Chicago

    [Fixed]

    - Fixed UTF-8 error in POD. Thanks @borisdaeppen for the patch!
      [Github #110]
    - Fixed issues in OpenAPI specs not validating w/ JSON::Validator
      v4.00. Thanks @eserte for the report! [Github #111]

    [Docs]

    - Fixed an issue in the Yancy::Controller::Yancy docs where the
      `:id` placeholder was not explained correctly: This needs to be
      the name of the ID field (or fields) in order to work.

1.060     2020-06-07 16:25:43-05:00 America/Chicago

    [Fixed]

    - Fixed editor not working with any Markdown fields, a regression
      caused by v1.057. Thanks @uniejo for the patch! [Github #109]
      This time, there are tests to prevent further regressions...

1.059     2020-06-06 17:53:43-05:00 America/Chicago

    [Added]

    - Added Yancy::I18N and started translating parts of the Yancy
      editor. Much more work to do here, but it's a start!

    [Fixed]

    - Fixed no response from the server when user tries to register
      while registration is disabled. Thanks @uniejo for the patch!
      [Github #108]
    - Fixed finding foreign keys on databases with multiple catalogs or
      schemas. Thanks @sammakkoinen for the report! [Github #107]

1.058     2020-06-03 14:15:16-05:00 America/Chicago

    [Fixed]

    - Increased File::Temp version to fix SQLite locking problem during
      tests on BSD systems. Thanks @eserte for reporting this and
      explaining the fix! [Github #106]

1.057     2020-05-30 21:37:23-05:00 America/Chicago

    [Important!]

    - Mojolicious 8.50 raised its minimum Perl requirement to 5.16, and
      in this version, Yancy has done the same.
    - The undocumented `id_field` attribute has been removed to support
      composite keys. Please make sure that your URL placeholders are
      named after the field in the schema, not just `id`.

    [Added]
